--- a/dockergen/update-iptables.tmpl
+++ b/dockergen/update-iptables.tmpl
@@ -15,23 +15,25 @@ done
         done
 
         {{ range $index, $container := $containersByExternalIP }}
-			# Check for NAT rules that do not allow traffic from same network
+            # Check for NAT rules that do not allow traffic from same network
             lines=$(iptables --line-numbers --numeric -v -t nat --list DOCKER | awk '$10=="{{ $externalIP }}" && $7!="*" {print $1}' | tac)
-			
-			if [ -n "$lines" ]; then
-				# Remove entries that restrict traffic
-				for line in $lines; do
-					iptables -t nat -D DOCKER $line
-				done
-				
-				# Add rules without traffic restrictions
-				{{ range $index, $address := $container.Addresses }}
-					iptables -t nat -A DOCKER -d {{ $address.IP }}/32 -p {{ $address.Proto }} -m {{ $address.Proto }} --dport {{ $address.HostPort }} -j DNAT --to-destination {{ $address.IP }}:{{ $address.Port }}
-				{{ end }}
-			fi
+            
+            if [ -n "$lines" ]; then
+                # Remove entries that restrict traffic
+                for line in $lines; do
+                    iptables -t nat -D DOCKER $line
+                done
+            fi
 
-            # Route container's traffic from that external IP 
             {{ range $index, $network := $container.Networks }}
+                if [ -n "$lines" ]; then
+                    # Add rules without traffic restrictions
+                    {{ range $index, $address := $container.Addresses }}
+                        iptables -t nat -A DOCKER -p {{ $address.Proto }} -m {{ $address.Proto }} -d {{ $externalIP }}/32 --dport {{ $address.HostPort }} -j DNAT --to-destination {{ $network.IP }}:{{ $address.Port }}
+                    {{ end }}
+                fi
+                
+                # Route container's traffic from that external IP 
                 iptables -t nat -I EXTERNAL_IP -s {{ $network.IP }} -j SNAT --to-source {{ $externalIP }}
             {{ end }}
         {{ end }}
