--- a/dockergen/update-iptables.tmpl
+++ b/dockergen/update-iptables.tmpl
@@ -39,3 +39,19 @@ done
         {{ end }}
     {{ end }}
 {{ end }}
+
+activeIps=""
+
+# Store used ip address
+{{ range $index, $container := $containers }}
+    {{ range $index, $network := $container.Networks }}
+        activeIps="${activeIps},{{ $network.IP }},"
+    {{ end }}
+{{ end }}
+
+lines=$(iptables --line-numbers --numeric -v -t nat --list DOCKER | awk -v activeIps=$activeIps '$4=="DNAT" && split($13, dnat, ":")==3 && index(activeIps, "," dnat[2] ",")==0 {print $1}' | tac)
+
+# Remove entries for stopped containers
+for line in $lines; do
+    iptables -t nat -D DOCKER $line
+done
