fix: containers iterating syntax

--- a/dockergen/update-iptables.tmpl
+++ b/dockergen/update-iptables.tmpl
@@ -43,7 +43,7 @@ done
 activeIps=""
 
 # Store used ip address
-{{ range $index, $container := $containers }}
+{{ range $index, $container := . }}
     {{ range $index, $network := $container.Networks }}
         activeIps="${activeIps},{{ $network.IP }},"
     {{ end }}
